--- a/production/index.html
+++ b/production/index.html
@@ -31,7 +31,7 @@
 				</header>
 				<ul>
 					<li>
-						<a href="index.html">
+						<a href="index.html" class="ativo">
 							<span class="icone home ativo"></span>
 							Home
 						</a>
@@ -71,7 +71,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal"></section>
+		<section id="banner" class="banner-principal home"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -136,7 +136,7 @@
 					<a href="prata.html">
 						<span class="imagem prata"></span>
 						<span class="preco">280,00</span>
-						<span class="titulo">Prata</span>
+						<span class="titulo">Brilhante</span>
 						<span class="icone">+</span>
 					</a>
 				</li>
@@ -192,7 +192,7 @@
 					<a href="brilhante.html">
 						<span class="imagem brilhante"></span>
 						<span class="preco">55,00</span>
-						<span class="titulo">Brilhante</span>
+						<span class="titulo">Prata</span>
 						<span class="icone">+</span>
 					</a>
 				</li>
@@ -258,6 +258,79 @@
 					</li>
 				</ul>
 			</section>
+		</section>
+
+		<section class="nossas-promocoes">
+			<section class="promocoes">
+				<h1>Promoções</h1>
+				<span>Informe o seu e-mail e participe da promoção que sorteia todo o mês a uma permanência de 12 horas grátis em uma suíte diferenciada para você ter momentos especiais.</span>
+				<form action="">
+					<label for="nome">Nome</label>
+					<input type="text" id="#nome" placeholder="Digite seu nome">
+					<label for="email">E-mail</label>
+					<input type="email" id="#email" placeholder="Digite seu e-mail">
+					<button type="submit" name="enviar" value="foo">Enviar</button>
+				</form>
+			</section>
+		</section>
+
+		<section class="nossos-contatos">
+			<h1>Contatos</h1>
+
+			<section class="contatos">
+				<section class="blocos logo">
+					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+				</section>
+
+				<section class="blocos endereco">
+					<h3><span class="endereco"></span> Endereço</h3>
+					<p>Rua Aparecida, 1410</p>
+					<p>Jardim Santa Rosália</p>
+					<p>Sorocaba - SP</p>
+				</section>
+
+				<section class="blocos informacoes">
+					<h3><span class="informacoes"></span> Informações</h3>
+					<p>(11) 99105-5975</p>
+				</section>
+
+				<aside class="blocos social">
+					<h3><span class="social"></span> Redes sociais</h3>
+
+					<ul>
+						<li><a href="https://facebook.com" target="_blank" class="facebook"></a></li>
+					</ul>
+				</aside>
+
+				<aside class="blocos gps">
+					<ul>
+						<li><a href="https://facebook.com" target="_blank" class="gmap"></a></li>
+						<li><a href="https://facebook.com" target="_blank" class="waze"></a></li>
+					</ul>
+				</aside>
+			</section>
+		</section>
+
+		<section class="menu-rodape">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html" class="ativo">Home</a>
+					</li>
+					<li>
+						<a href="suites.html">Suítes</a>
+					</li>
+					<li>
+						<a href="promocoes.html">Promoções</a>
+					</li>
+					<li>
+						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="localizacao.html">Localização</a>
+					</li>
+				</ul>
+			</nav>
 		</section>
 
 		<footer class="rodape-principal">
