--- a/production/sobre.html
+++ b/production/sobre.html
@@ -49,7 +49,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="sobre.html">
+						<a href="sobre.html" class="ativo">
 							<span class="icone sobre ativo"></span>
 							Sobre nós
 						</a>
@@ -71,12 +71,177 @@
 
 		<span class="fake"></span>
 
-		<footer class="rodape-principal">
+		<section id="banner" class="banner-principal sobre"></section>
+
+		<header id="header" class="header-principal">
+			<span class="seta"></span>
+			<h1>
+				SOBRE NÓS
+			</h1>
+		</header>
+
+		<article class="texto-sobre">
+			<p>O estabelecimento nasceu no ano de 2000, seu nome na época era Auto Moto Lanches Amore Mio, o termo “Amore Mio” era muito utilizado na novela Terra Nostra que estava sendo exibida na época pela emissora Rede Globo.</p>
+			<p>Alguns anos depois o Auto Moto Lanches Amore Mio passou por uma transformação e no ano de 2008 nascia um novo conceito, com excelentes acomodações e diferente de todos os outros Auto Lanche da cidade.</p>
+			<p>Nascia a <strong>Pousada Você que Sabe</strong>, com um nome autêntico, criativo e engraçado. O nome “Você que Sabe” surgiu ao notar que as respostas eram sempre as mesmas quando as pessoas perguntavam: Aonde vamos? Você que Sabe! Foi nesse momento que surgiu a ideia de dar o nome da pousada de Você que Sabe.</p>
+			<p><strong>Venha hospedar-se conosco, será um prazer recebe-los.</strong></p>
+		</article>
+
+		<section class="suites-home">
+			<h1>Conheça nossas suítes</h1>
+
+			<ul>
+				<li>
+					<a href="prata.html">
+						<span class="imagem prata"></span>
+						<span class="preco">280,00</span>
+						<span class="titulo">Brilhante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi-duplex.html">
+						<span class="imagem rubi-duplex"></span>
+						<span class="preco">180,00</span>
+						<span class="titulo">Rubi duplex</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi.html">
+						<span class="imagem rubi"></span>
+						<span class="preco">165,00</span>
+						<span class="titulo">Rubi</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="esmeralda.html">
+						<span class="imagem esmeralda"></span>
+						<span class="preco">135,00</span>
+						<span class="titulo">Esmeralda</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="perola.html">
+						<span class="imagem perola"></span>
+						<span class="preco">110,00</span>
+						<span class="titulo">Perola</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="diamante.html">
+						<span class="imagem diamante"></span>
+						<span class="preco">90,00</span>
+						<span class="titulo">Diamante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="ouro.html">
+						<span class="imagem ouro"></span>
+						<span class="preco">80,00</span>
+						<span class="titulo">Ouro</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="brilhante.html">
+						<span class="imagem brilhante"></span>
+						<span class="preco">55,00</span>
+						<span class="titulo">Prata</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+			</ul>
+		</section>
+
+		<section class="nossos-contatos">
+			<h1>Contatos</h1>
+
+			<section class="contatos">
+				<section class="blocos logo">
+					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+				</section>
+
+				<section class="blocos endereco">
+					<h3><span class="endereco"></span> Endereço</h3>
+					<p>Rua Aparecida, 1410</p>
+					<p>Jardim Santa Rosália</p>
+					<p>Sorocaba - SP</p>
+				</section>
+
+				<section class="blocos informacoes">
+					<h3><span class="informacoes"></span> Informações</h3>
+					<p>(11) 99105-5975</p>
+				</section>
+
+				<aside class="blocos social">
+					<h3><span class="social"></span> Redes sociais</h3>
+
+					<ul>
+						<li><a href="https://facebook.com" target="_blank" class="facebook"></a></li>
+					</ul>
+				</aside>
+
+				<aside class="blocos gps">
+					<ul>
+						<li><a href="https://facebook.com" target="_blank" class="gmap"></a></li>
+						<li><a href="https://facebook.com" target="_blank" class="waze"></a></li>
+					</ul>
+				</aside>
+			</section>
+		</section>
+
+		<section class="menu-rodape">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="suites.html">Suítes</a>
+					</li>
+					<li>
+						<a href="promocoes.html">Promoções</a>
+					</li>
+					<li>
+						<a href="sobre.html" class="ativo">Sobre nós</a>
+					</li>
+					<li>
+						<a href="localizacao.html">Localização</a>
+					</li>
+				</ul>
+			</nav>
+		</section>
+
+		<footer class="rodape-principal sobre">
 			<section>
 				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- initial script -->
+		<script>
+			function estruturaInicial() {
+				var banner = document.getElementById('banner');
+				var alturaTela = document.body.offsetHeight;
+				var header = document.getElementById('header').offsetHeight;
+
+				banner.style.height = ((alturaTela - header) - 120)  + 'px'; // 100 === menu.style.height
+			}
+			window.onload = estruturaInicial;
+
+			// atualiza a estrutura
+			window.addEventListener('resize', function() {
+				estruturaInicial();
+			});
+		</script>
+
+		<!-- scripts -->
 		<script src="dist/js/main.min.js"></script>
 	</body>
 </html>
