--- a/production/promocoes.html
+++ b/production/promocoes.html
@@ -43,7 +43,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="promocoes.html">
+						<a href="promocoes.html" class="ativo">
 							<span class="icone promocoes ativo"></span>
 							Promoções
 						</a>
@@ -71,12 +71,36 @@
 
 		<span class="fake"></span>
 
+		<section class="menu-rodape">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="suites.html">Suítes</a>
+					</li>
+					<li>
+						<a href="promocoes.html" class="ativo">Promoções</a>
+					</li>
+					<li>
+						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="localizacao.html">Localização</a>
+					</li>
+				</ul>
+			</nav>
+		</section>
+
 		<footer class="rodape-principal">
 			<section>
 				<p>Copyright &copy; 2017 Pousada Você Que Sabe  &bull; Todos os direitos reservados</p>
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
 		<script src="dist/js/main.min.js"></script>
 	</body>
 </html>
