--- a/production/suites.html
+++ b/production/suites.html
@@ -37,7 +37,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="suites.html">
+						<a href="suites.html" class="ativo">
 							<span class="icone suites ativo"></span>
 							Suítes
 						</a>
@@ -72,16 +72,96 @@
 		<span class="fake"></span>
 
 		<section class="suites-home">
+			<h1>Conheça nossas suítes</h1>
+
 			<ul>
-				<li><a href="prata.html">prata</a></li>
-				<li><a href="rubi-duplex.html">rubi duplex</a></li>
-				<li><a href="esmeralda.html">esmeralda</a></li>
-				<li><a href="ouro.html">ouro</a></li>
-				<li><a href="brilhante.html">brilhante</a></li>
-				<li><a href="diamante.html">diamante</a></li>
-				<li><a href="perola.html">perola</a></li>
-				<li><a href="rubi.html">rubi</a></li>
+				<li>
+					<a href="prata.html">
+						<span class="imagem prata"></span>
+						<span class="preco">280,00</span>
+						<span class="titulo">Brilhante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi-duplex.html">
+						<span class="imagem rubi-duplex"></span>
+						<span class="preco">180,00</span>
+						<span class="titulo">Rubi duplex</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="rubi.html">
+						<span class="imagem rubi"></span>
+						<span class="preco">165,00</span>
+						<span class="titulo">Rubi</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="esmeralda.html">
+						<span class="imagem esmeralda"></span>
+						<span class="preco">135,00</span>
+						<span class="titulo">Esmeralda</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="perola.html">
+						<span class="imagem perola"></span>
+						<span class="preco">110,00</span>
+						<span class="titulo">Perola</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="diamante.html">
+						<span class="imagem diamante"></span>
+						<span class="preco">90,00</span>
+						<span class="titulo">Diamante</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="ouro.html">
+						<span class="imagem ouro"></span>
+						<span class="preco">80,00</span>
+						<span class="titulo">Ouro</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
+				<li>
+					<a href="brilhante.html">
+						<span class="imagem brilhante"></span>
+						<span class="preco">55,00</span>
+						<span class="titulo">Prata</span>
+						<span class="icone">+</span>
+					</a>
+				</li>
 			</ul>
+		</section>
+
+		<section class="menu-rodape">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="suites.html" class="ativo">Suítes</a>
+					</li>
+					<li>
+						<a href="promocoes.html">Promoções</a>
+					</li>
+					<li>
+						<a href="sobre.html">Sobre nós</a>
+					</li>
+					<li>
+						<a href="localizacao.html">Localização</a>
+					</li>
+				</ul>
+			</nav>
 		</section>
 
 		<footer class="rodape-principal">
@@ -90,6 +170,8 @@
 				<p>Desenvolvido por <a href="http://chefdesign.com.br/" target="_blank">ChefDesign</a></p>
 			</section>
 		</footer>
+
+		<!-- scripts -->
 		<script src="dist/js/main.min.js"></script>
 	</body>
 </html>
