--- a/promocoes.html
+++ b/promocoes.html
@@ -72,6 +72,20 @@
 
 		<span class="fake"></span>
 
+		<section class="nossas-promocoes promocoes">
+			<section class="promocoes">
+				<h1>Promoções</h1>
+				<span>Informe o seu e-mail e participe da promoção que sorteia todo o mês a uma permanência de 12 horas grátis em uma suíte diferenciada para você ter momentos especiais.</span>
+				<form action="">
+					<label for="nome">Nome</label>
+					<input type="text" id="#nome" placeholder="Digite seu nome">
+					<label for="email">E-mail</label>
+					<input type="email" id="#email" placeholder="Digite seu e-mail">
+					<button type="submit" name="enviar" value="foo">Enviar</button>
+				</form>
+			</section>
+		</section>
+
 		<section class="menu-rodape">
 			<nav>
 				<ul>
