vegas plugin (wip)

--- a/production/index.html
+++ b/production/index.html
@@ -71,7 +71,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal home"></section>
+		<section id="slideshow" class="banner-principal home"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -343,7 +343,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('banner');
+				var banner = document.getElementById('slideshow');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
