--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal home"></section>
+		<section id="slideshow" class="banner-principal home"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -344,7 +344,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('banner');
+				var banner = document.getElementById('slideshow');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
@@ -360,6 +360,7 @@
 				
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="vendor/vegas/dist/vegas.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
