--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 		<span class="fake"></span>
 
-		<section id="slideshow" class="banner-principal home"></section>
+		<section id="slideshow-home" class="banner-principal home"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -344,7 +344,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('slideshow');
+				var banner = document.getElementById('slideshow-home');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
