--- a/suites.html
+++ b/suites.html
@@ -72,9 +72,16 @@
 
 		<span class="fake"></span>
 
-		<section class="suites-home">
-			<h1>Conheça nossas suítes</h1>
+		<section id="slideshow-suites" class="banner-principal home"></section>
 
+		<header id="header" class="header-principal">
+			<span class="seta"></span>
+			<h1>
+				CONHEÇA NOSSAS SUÍTES
+			</h1>
+		</header>
+
+		<section class="suites-home">
 			<ul>
 				<li>
 					<a href="brilhante.html">
@@ -172,8 +179,26 @@
 			</section>
 		</footer>
 
+		<!-- initial script -->
+		<script>
+			function estruturaInicial() {
+				var banner = document.getElementById('slideshow-suites');
+				var alturaTela = document.body.offsetHeight;
+				var header = document.getElementById('header').offsetHeight;
+
+				banner.style.height = ((alturaTela - header) - 120)  + 'px'; // 100 === menu.style.height
+			}
+			window.onload = estruturaInicial;
+
+			// atualiza a estrutura
+			window.addEventListener('resize', function() {
+				estruturaInicial();
+			});
+		</script>
+
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="vendor/vegas/dist/vegas.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
