--- a/sobre.html
+++ b/sobre.html
@@ -72,7 +72,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal sobre"></section>
+		<section id="slideshow-sobre" class="banner-principal sobre"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -228,7 +228,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('banner');
+				var banner = document.getElementById('slideshow-sobre');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
@@ -243,7 +243,9 @@
 		</script>
 
 		<!-- scripts -->
+		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="vendor/vegas/dist/vegas.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
