--- a/index.html
+++ b/index.html
@@ -206,30 +206,30 @@
 			<section class="facilidades">
 				<ul>
 					<li>
-						<a href="javascript:void(0)">
+						<a href="#higiene" class="colorbox">
+							<span class="icone higiene"></span>
+							<span class="texto">Higiene</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="#seguranca" class="colorbox">
 							<span class="icone seguranca"></span>
 							<span class="texto">Segurança</span>
 							<span class="mais">+</span>
 						</a>
 					</li>
 					<li>
-						<a href="javascript:void(0)">
+						<a href="#permanencia" class="colorbox">
+							<span class="icone permanencia"></span>
+							<span class="texto">Permanência</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="#agua" class="colorbox">
 							<span class="icone agua"></span>
 							<span class="texto">Falta d'água</span>
-							<span class="mais">+</span>
-						</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)">
-							<span class="icone tv"></span>
-							<span class="texto">TV</span>
-							<span class="mais">+</span>
-						</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)">
-							<span class="icone seducao"></span>
-							<span class="texto">Sedução e fetiche</span>
 							<span class="mais">+</span>
 						</a>
 					</li>
@@ -237,28 +237,76 @@
 
 				<ul>
 					<li>
-						<a href="javascript:void(0)">
-							<span class="icone permanencia"></span>
-							<span class="texto">Permanência</span>
-							<span class="mais">+</span>
-						</a>
-					</li>
-					<li>
-						<a href="javascript:void(0)">
+						<a href="#wifi" class="colorbox">
 							<span class="icone wifi"></span>
 							<span class="texto">Wi-fi</span>
 							<span class="mais">+</span>
 						</a>
 					</li>
 					<li>
-						<a href="javascript:void(0)">
+						<a href="#tv" class="colorbox">
+							<span class="icone tv"></span>
+							<span class="texto">TV</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
+					<li>
+						<a href="#ar" class="colorbox">
 							<span class="icone ar"></span>
 							<span class="texto">Ar condicionado</span>
 							<span class="mais">+</span>
 						</a>
 					</li>
+					<li>
+						<a href="#seducao" class="colorbox">
+							<span class="icone seducao"></span>
+							<span class="texto">Sedução e fetiche</span>
+							<span class="mais">+</span>
+						</a>
+					</li>
 				</ul>
 			</section>
+
+			<div class="modalFacilidades">
+				<p id="higiene">
+					Temos uma infraestrutura enorme para cuidar da higienização e limpeza da pousada, caso queira conhecer solicite na entrada da pousada.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="seguranca">
+					O interior da pousada é monitorado 24 horas e contamos com portão automático com entrada liberada somente após a identificação.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="permanencia">
+					12 horas de permanência todos os dias, inclusive finais de semana e feriados. (Por tempo limitado).
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="agua">
+					E se faltar água durante a sua estadia, o que fazer? Na pousada Você que Sabe temos uma infraestrutura que suporta até 5 dias sem reabastecimento.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="wifi">
+					Todas as suítes mesmo as mais simples têm acesso à internet Wifi gratuitamente.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="tv">
+					Todas as suítes mesmo as mais simples estão equipadas com Tv de Led e as suítes mais luxuosas contam com Smart TV.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="ar">
+					Temos 37 suítes, sendo 26 delas com ar condicionado e as demais com ventilador.
+				</p>
+			</div>
+			<div class="modalFacilidades">
+				<p id="seducao">
+					Temos um Sex Shop Integrado na pousada exclusivo para clientes.
+				</p>
+			</div>
 		</section>
 
 		<section class="nossas-promocoes">
@@ -361,6 +409,7 @@
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="vendor/vegas/dist/vegas.js"></script>
+		<script src="vendor/jquery-colorbox/jquery.colorbox.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
