--- a/production/sobre.html
+++ b/production/sobre.html
@@ -71,7 +71,7 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal sobre"></section>
+		<section id="slideshow-sobre" class="banner-principal sobre"></section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -227,7 +227,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('banner');
+				var banner = document.getElementById('slideshow-sobre');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
@@ -241,6 +241,7 @@
 			});
 		</script>
 
+		<!-- scripts -->
 		<!-- scripts -->
 		<script src="dist/js/main.min.js"></script>
 	</body>
