--- a/production/promocoes.html
+++ b/production/promocoes.html
@@ -75,12 +75,13 @@
 			<section class="promocoes">
 				<h1>Promoções</h1>
 				<span>Informe o seu e-mail e participe da promoção que sorteia todo o mês a uma permanência de 12 horas grátis em uma suíte diferenciada para você ter momentos especiais.</span>
-				<form action="">
+				
+				<form method="POST" id="formulario">
 					<label for="nome">Nome</label>
-					<input type="text" id="#nome" placeholder="Digite seu nome">
+					<input type="text" id="#nome" name="nome" placeholder="Digite seu nome">
 					<label for="email">E-mail</label>
-					<input type="email" id="#email" placeholder="Digite seu e-mail">
-					<button type="submit" name="enviar" value="foo">Enviar</button>
+					<input type="email" id="#email" name="email" placeholder="Digite seu e-mail">
+					<button type="submit" id="btnPromocoes">Enviar</button>
 				</form>
 			</section>
 		</section>
