--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
 
 				<form method="POST" id="formulario">
 					<label for="nome">Nome</label>
-					<input type="text" id="#nome" name="nome" placeholder="Digite seu nome">
+					<input type="text" id="nome" name="nome" placeholder="Digite seu nome">
 					<label for="email">E-mail</label>
-					<input type="email" id="#email" name="email" placeholder="Digite seu e-mail">
+					<input type="email" id="email" name="email" placeholder="Digite seu e-mail">
 					<button type="submit" id="btnPromocoes">Enviar</button>
 				</form>
 			</section>
