--- a/production/esmeralda.html
+++ b/production/esmeralda.html
@@ -79,6 +79,43 @@
 
 		<a href="suites.html">VOLTAR</a>
 
+		<section class="nossos-contatos">
+			<h1>Contatos</h1>
+
+			<section class="contatos">
+				<section class="blocos logo">
+					<img src="assets/images/logo-alternativo-pousada-voce-que-sabe.png" alt="Imagem do logo">
+				</section>
+
+				<section class="blocos endereco">
+					<h3><span class="endereco"></span> Endereço</h3>
+					<p>Rua Aparecida, 1410</p>
+					<p>Jardim Santa Rosália</p>
+					<p>Sorocaba - SP</p>
+				</section>
+
+				<section class="blocos informacoes">
+					<h3><span class="informacoes"></span> Informações</h3>
+					<p>(11) 99105-5975</p>
+				</section>
+
+				<aside class="blocos social">
+					<h3><span class="social"></span> Redes sociais</h3>
+
+					<ul>
+						<li><a href="https://facebook.com" target="_blank" class="facebook"></a></li>
+					</ul>
+				</aside>
+
+				<aside class="blocos gps">
+					<ul>
+						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
+						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
+					</ul>
+				</aside>
+			</section>
+		</section>
+
 		<section class="menu-rodape">
 			<nav>
 				<ul>
