--- a/production/sobre.html
+++ b/production/sobre.html
@@ -188,8 +188,8 @@
 
 				<aside class="blocos gps">
 					<ul>
-						<li><a href="https://facebook.com" target="_blank" class="gmap"></a></li>
-						<li><a href="https://facebook.com" target="_blank" class="waze"></a></li>
+						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
+						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
 					</ul>
 				</aside>
 			</section>
@@ -241,7 +241,6 @@
 			});
 		</script>
 
-		<!-- scripts -->
 		<!-- scripts -->
 		<script src="dist/js/main.min.js"></script>
 	</body>
