--- a/localizacao.html
+++ b/localizacao.html
@@ -111,8 +111,8 @@
 
 				<aside class="blocos gps">
 					<ul>
-						<li><a href="https://facebook.com" target="_blank" class="gmap"></a></li>
-						<li><a href="https://facebook.com" target="_blank" class="waze"></a></li>
+						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
+						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
 					</ul>
 				</aside>
 			</section>
@@ -166,6 +166,9 @@
 
 		<!-- scripts -->
 		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="vendor/vegas/dist/vegas.js"></script>
+		<script src="vendor/jquery-colorbox/jquery.colorbox.js"></script>
+		<script src="vendor/jquery-validation/dist/jquery.validate.js"></script>
 		<script src="dev/js/main.js"></script>
 	</body>
 </html>
