--- a/production/localizacao.html
+++ b/production/localizacao.html
@@ -110,8 +110,8 @@
 
 				<aside class="blocos gps">
 					<ul>
-						<li><a href="https://facebook.com" target="_blank" class="gmap"></a></li>
-						<li><a href="https://facebook.com" target="_blank" class="waze"></a></li>
+						<li><a href="https://goo.gl/maps/RhxLa9bA2CT2" target="_blank" class="gmap"></a></li>
+						<li><a href="waze://?ll=-23.4828559,-47.4498219&navigate=yes" target="_blank" class="waze"></a></li>
 					</ul>
 				</aside>
 			</section>
