--- a/promocoes.html
+++ b/promocoes.html
@@ -64,7 +64,7 @@
 				</ul>
 				<aside>
 					<ul>
-						<li><a href="https://www.facebook.com/" target="_blank" class="facebook"></a></li>
+						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
 					</ul>
 				</aside>
 			</nav>
