--- a/production/localizacao.html
+++ b/production/localizacao.html
@@ -63,7 +63,7 @@
 				</ul>
 				<aside>
 					<ul>
-						<li><a href="https://www.facebook.com/" target="_blank" class="facebook"></a></li>
+						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
 					</ul>
 				</aside>
 			</nav>
@@ -104,7 +104,7 @@
 					<h3><span class="social"></span> Redes sociais</h3>
 
 					<ul>
-						<li><a href="https://facebook.com" target="_blank" class="facebook"></a></li>
+						<li><a href="https://www.facebook.com/pousadavocequesabe24h/" target="_blank" class="facebook"></a></li>
 					</ul>
 				</aside>
 
