--- a/production/localizacao.html
+++ b/production/localizacao.html
@@ -71,7 +71,11 @@
 
 		<span class="fake"></span>
 
-		<section id="banner" class="banner-principal localizacao"></section>
+		<section id="banner-localizacao" class="banner-principal localizacao">
+			<div class="overlay" onClick="style.pointerEvents='none'"></div>
+			
+			<iframe width="100%" height="100%" frameborder="0" style="border:0" scrolling="no" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJS9U-L6qKxZQRxjBRuM0lcs4&key=AIzaSyCkRq_NE0El6Ut7BE9yNmk5jJy9Qsmu0A0" allowfullscreen></iframe>
+		</section>
 
 		<header id="header" class="header-principal">
 			<span class="seta"></span>
@@ -149,7 +153,7 @@
 		<!-- initial script -->
 		<script>
 			function estruturaInicial() {
-				var banner = document.getElementById('banner');
+				var banner = document.getElementById('banner-localizacao');
 				var alturaTela = document.body.offsetHeight;
 				var header = document.getElementById('header').offsetHeight;
 
