--- a/production/suites.html
+++ b/production/suites.html
@@ -75,7 +75,7 @@
 			<ul>
 				<li>
 					<span class="imagem brilhante"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
 						<p class="descricao">Suíte com mesa de bilhar, churrasqueira e muito mais.</p>
 						<span class="preco">R$ 280,00</span>
@@ -84,7 +84,7 @@
 				</li>
 				<li>
 					<span class="imagem rubi-duplex"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
 						<p class="descricao">Suíte com hidro e churrasqueira.</p>
 						<span class="preco">R$ 180,00</span>
@@ -93,7 +93,7 @@
 				</li>
 				<li>
 					<span class="imagem rubi"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
 						<p class="descricao">Suítes decoradas com cama e hidro no formato de coração.</p>
 						<span class="preco">R$ 165,00</span>
@@ -102,7 +102,7 @@
 				</li>
 				<li>
 					<span class="imagem esmeralda"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Esmeralda</span>
 						<p class="descricao">Suíte com hidro e TV de 40"</p>
 						<span class="preco">R$ 135,00</span>
@@ -111,7 +111,7 @@
 				</li>
 				<li>
 					<span class="imagem perola"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Pérola</span>
 						<p class="descricao">3 suítes diferentemente decoradas.</p>
 						<span class="preco">R$ 110,00</span>
@@ -120,7 +120,7 @@
 				</li>
 				<li>
 					<span class="imagem diamante"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Diamante</span>
 						<p class="descricao">Suíte com frigobar e ar condicionado.</p>
 						<span class="preco">R$ 90,00</span>
@@ -129,7 +129,7 @@
 				</li>
 				<li>
 					<span class="imagem ouro"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Ouro</span>
 						<p class="descricao">Suíte com frigobar.</p>
 						<span class="preco">R$ 80,00</span>
@@ -138,7 +138,7 @@
 				</li>
 				<li>
 					<span class="imagem prata"></span>
-					<section class="info">
+					<section class="informacoes">
 						<span class="titulo">Suíte Prata</span>
 						<p class="descricao">3 suítes diferentes unicamente decoradas.</p>
 						<span class="preco">R$ 55,00</span>
