--- a/esmeralda.html
+++ b/esmeralda.html
@@ -76,15 +76,15 @@
 			<ul>
 				<li>
 					<span class="imagem esmeralda-24">
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-01.jpg" data-fancybox="esmeralda-24" data-caption="Legenda">
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-01.jpg" data-fancybox="esmeralda-24">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-02.jpg" data-fancybox="esmeralda-24" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-03.jpg" data-fancybox="esmeralda-24" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-04.jpg" data-fancybox="esmeralda-24" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-05.jpg" data-fancybox="esmeralda-24" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-06.jpg" data-fancybox="esmeralda-24" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-02.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-03.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-04.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-05.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-24/Foto-suíte-24-esmeralda-perspectiva-06.jpg" data-fancybox="esmeralda-24" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
@@ -111,12 +111,12 @@
 				</li>
 				<li>
 					<span class="imagem esmeralda-25">
-						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-01.jpg" data-fancybox="esmeralda-25" data-caption="Legenda">
+						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-01.jpg" data-fancybox="esmeralda-25">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-02.jpg" data-fancybox="esmeralda-25" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-03.jpg" data-fancybox="esmeralda-25" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-02.jpg" data-fancybox="esmeralda-25" class="hidden"></a>
+						<a href="assets/images/suites/Esmeralda/Suíte-25/Foto-suíte-25-esmeralda-perspectiva-03.jpg" data-fancybox="esmeralda-25" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
