--- a/brilhante.html
+++ b/brilhante.html
@@ -76,16 +76,16 @@
 			<ul>
 				<li>
 					<span class="imagem brilhante">
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-01.jpg" data-fancybox="brilhante" data-caption="Legenda">
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-01.jpg" data-fancybox="brilhante">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-02.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-03.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-04.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-05.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-06.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-07.jpg" data-fancybox="brilhante" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-02.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-03.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-04.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-05.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-06.jpg" data-fancybox="brilhante" class="hidden"></a>
+						<a href="assets/images/suites/Brilhante/Foto-suíte-36-brilhante-perspectiva-07.jpg" data-fancybox="brilhante" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Brilhante</span>
