--- a/rubi-duplex.html
+++ b/rubi-duplex.html
@@ -76,16 +76,16 @@
 			<ul>
 				<li>
 					<span class="imagem rubi-duplex-17">
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-17">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-17/foto-suíte-17-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-17" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
@@ -112,15 +112,15 @@
 				</li>
 				<li>
 					<span class="imagem rubi-duplex-18">
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-01.jpg" data-fancybox="rubi-duplex-18">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-18" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-02.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-03.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-04.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-05.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
+						<a href="assets/images/suites/Rubi-Duplex/Suíte-18/foto-suíte-18-rubi-duplex-perspectiva-06.jpg" data-fancybox="rubi-duplex-18" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi Duplex</span>
