--- a/rubi.html
+++ b/rubi.html
@@ -76,15 +76,15 @@
 			<ul>
 				<li>
 					<span class="imagem rubi-34">
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-01.jpg" data-fancybox="rubi-34" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-01.jpg" data-fancybox="rubi-34">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-02.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-03.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-04.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-05.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-06.jpg" data-fancybox="rubi-34" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-02.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-03.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-04.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-05.jpg" data-fancybox="rubi-34" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-34/foto-suíte-34-rubi-perspectiva-06.jpg" data-fancybox="rubi-34" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
@@ -111,13 +111,13 @@
 				</li>
 				<li>
 					<span class="imagem rubi-35">
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-01.jpg" data-fancybox="rubi-35" data-caption="Legenda">
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-01.jpg" data-fancybox="rubi-35">
 							<span></span>
 							Ver fotos
 						</a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-02.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-03.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
-						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-04.jpg" data-fancybox="rubi-35" data-caption="Legenda" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-02.jpg" data-fancybox="rubi-35" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-03.jpg" data-fancybox="rubi-35" class="hidden"></a>
+						<a href="assets/images/suites/Rubi/Suíte-35/foto-suíte-35-rubiperspectiva-04.jpg" data-fancybox="rubi-35" class="hidden"></a>
 					</span>
 					<section class="informacoes">
 						<span class="titulo">Suíte Rubi</span>
